--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "D2(RS) RESTFull API - http://www.prjd2studios.com",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "author": "@d4nd14z",
   "license": "MIT",
